// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CareerFilter renders component 1`] = `
<div>
  <form
    onSubmit={[Function]}
  >
    <ul>
      <li>
        <label
          htmlFor="traitify-career-search"
        >
          search
        </label>
        <input
          id="traitify-career-search"
          name="search"
          onChange={[Function]}
          placeholder="search"
          type="text"
          value=""
        />
      </li>
      <li>
        <div>
          <button
            onClick={[Function]}
            type="button"
          >
            filter
          </button>
          <ul
            className="undefined "
          >
            <div>
              <li>
                sort
              </li>
              <li>
                <label
                  htmlFor="traitify-career-sort-match"
                >
                  <input
                    aria-labelledby="traitify-career-sort-match-label"
                    checked={true}
                    id="traitify-career-sort-match"
                    name="sort"
                    onChange={[Function]}
                    type="radio"
                    value="match"
                  />
                  <div
                    className="mock"
                  >
                    Icon - 
                    check-square
                  </div>
                  <span
                    id="traitify-career-sort-match-label"
                  >
                    best_match
                  </span>
                </label>
              </li>
              <li>
                <label
                  htmlFor="traitify-career-sort-title"
                >
                  <input
                    aria-labelledby="traitify-career-sort-title-label"
                    checked={false}
                    id="traitify-career-sort-title"
                    name="sort"
                    onChange={[Function]}
                    type="radio"
                    value="title"
                  />
                  <div
                    className="mock"
                  >
                    Icon - 
                    square
                  </div>
                  <span
                    id="traitify-career-sort-title-label"
                  >
                    title
                  </span>
                </label>
              </li>
            </div>
            <div>
              <li>
                experience_level
              </li>
              <li>
                <label
                  htmlFor="traitify-career-level-1"
                >
                  <input
                    aria-labelledby="traitify-career-level-1-label"
                    checked={true}
                    id="traitify-career-level-1"
                    name="experience_level"
                    onChange={[Function]}
                    type="checkbox"
                    value={1}
                  />
                  <div
                    className="mock"
                  >
                    Icon - 
                    check-square
                  </div>
                  <span
                    id="traitify-career-level-1-label"
                  >
                    experience_level_1
                  </span>
                </label>
              </li>
              <li>
                <label
                  htmlFor="traitify-career-level-2"
                >
                  <input
                    aria-labelledby="traitify-career-level-2-label"
                    checked={true}
                    id="traitify-career-level-2"
                    name="experience_level"
                    onChange={[Function]}
                    type="checkbox"
                    value={2}
                  />
                  <div
                    className="mock"
                  >
                    Icon - 
                    check-square
                  </div>
                  <span
                    id="traitify-career-level-2-label"
                  >
                    experience_level_2
                  </span>
                </label>
              </li>
              <li>
                <label
                  htmlFor="traitify-career-level-3"
                >
                  <input
                    aria-labelledby="traitify-career-level-3-label"
                    checked={true}
                    id="traitify-career-level-3"
                    name="experience_level"
                    onChange={[Function]}
                    type="checkbox"
                    value={3}
                  />
                  <div
                    className="mock"
                  >
                    Icon - 
                    check-square
                  </div>
                  <span
                    id="traitify-career-level-3-label"
                  >
                    experience_level_3
                  </span>
                </label>
              </li>
              <li>
                <label
                  htmlFor="traitify-career-level-4"
                >
                  <input
                    aria-labelledby="traitify-career-level-4-label"
                    checked={true}
                    id="traitify-career-level-4"
                    name="experience_level"
                    onChange={[Function]}
                    type="checkbox"
                    value={4}
                  />
                  <div
                    className="mock"
                  >
                    Icon - 
                    check-square
                  </div>
                  <span
                    id="traitify-career-level-4-label"
                  >
                    experience_level_4
                  </span>
                </label>
              </li>
              <li>
                <label
                  htmlFor="traitify-career-level-5"
                >
                  <input
                    aria-labelledby="traitify-career-level-5-label"
                    checked={true}
                    id="traitify-career-level-5"
                    name="experience_level"
                    onChange={[Function]}
                    type="checkbox"
                    value={5}
                  />
                  <div
                    className="mock"
                  >
                    Icon - 
                    check-square
                  </div>
                  <span
                    id="traitify-career-level-5-label"
                  >
                    experience_level_5
                  </span>
                </label>
              </li>
            </div>
            <div>
              <li>
                <input
                  type="submit"
                  value="search"
                />
              </li>
            </div>
          </ul>
        </div>
      </li>
      <div />
    </ul>
  </form>
</div>
`;

exports[`CareerFilter renders component with different icons and style 1`] = `
<div>
  <form
    onSubmit={[Function]}
  >
    <ul>
      <li>
        <label
          htmlFor="traitify-career-search"
        >
          search
        </label>
        <input
          id="traitify-career-search"
          name="search"
          onChange={[Function]}
          placeholder="search"
          type="text"
          value=""
        />
      </li>
      <li>
        <div>
          <button
            onClick={[Function]}
            type="button"
          >
            filter
          </button>
          <ul
            className="undefined undefined"
          >
            <div>
              <li>
                sort
              </li>
              <li>
                <label
                  htmlFor="traitify-career-sort-match"
                >
                  <input
                    aria-labelledby="traitify-career-sort-match-label"
                    checked={false}
                    id="traitify-career-sort-match"
                    name="sort"
                    onChange={[Function]}
                    type="radio"
                    value="match"
                  />
                  <div
                    className="mock"
                  >
                    Icon - 
                    square
                  </div>
                  <span
                    id="traitify-career-sort-match-label"
                  >
                    best_match
                  </span>
                </label>
              </li>
              <li>
                <label
                  htmlFor="traitify-career-sort-title"
                >
                  <input
                    aria-labelledby="traitify-career-sort-title-label"
                    checked={true}
                    id="traitify-career-sort-title"
                    name="sort"
                    onChange={[Function]}
                    type="radio"
                    value="title"
                  />
                  <div
                    className="mock"
                  >
                    Icon - 
                    check-square
                  </div>
                  <span
                    id="traitify-career-sort-title-label"
                  >
                    title
                  </span>
                </label>
              </li>
            </div>
            <div>
              <li>
                experience_level
              </li>
              <li>
                <label
                  htmlFor="traitify-career-level-1"
                >
                  <input
                    aria-labelledby="traitify-career-level-1-label"
                    checked={true}
                    id="traitify-career-level-1"
                    name="experience_level"
                    onChange={[Function]}
                    type="checkbox"
                    value={1}
                  />
                  <div
                    className="mock"
                  >
                    Icon - 
                    check-square
                  </div>
                  <span
                    id="traitify-career-level-1-label"
                  >
                    experience_level_1
                  </span>
                </label>
              </li>
              <li>
                <label
                  htmlFor="traitify-career-level-2"
                >
                  <input
                    aria-labelledby="traitify-career-level-2-label"
                    checked={true}
                    id="traitify-career-level-2"
                    name="experience_level"
                    onChange={[Function]}
                    type="checkbox"
                    value={2}
                  />
                  <div
                    className="mock"
                  >
                    Icon - 
                    check-square
                  </div>
                  <span
                    id="traitify-career-level-2-label"
                  >
                    experience_level_2
                  </span>
                </label>
              </li>
              <li>
                <label
                  htmlFor="traitify-career-level-3"
                >
                  <input
                    aria-labelledby="traitify-career-level-3-label"
                    checked={true}
                    id="traitify-career-level-3"
                    name="experience_level"
                    onChange={[Function]}
                    type="checkbox"
                    value={3}
                  />
                  <div
                    className="mock"
                  >
                    Icon - 
                    check-square
                  </div>
                  <span
                    id="traitify-career-level-3-label"
                  >
                    experience_level_3
                  </span>
                </label>
              </li>
              <li>
                <label
                  htmlFor="traitify-career-level-4"
                >
                  <input
                    aria-labelledby="traitify-career-level-4-label"
                    checked={false}
                    id="traitify-career-level-4"
                    name="experience_level"
                    onChange={[Function]}
                    type="checkbox"
                    value={4}
                  />
                  <div
                    className="mock"
                  >
                    Icon - 
                    square
                  </div>
                  <span
                    id="traitify-career-level-4-label"
                  >
                    experience_level_4
                  </span>
                </label>
              </li>
              <li>
                <label
                  htmlFor="traitify-career-level-5"
                >
                  <input
                    aria-labelledby="traitify-career-level-5-label"
                    checked={false}
                    id="traitify-career-level-5"
                    name="experience_level"
                    onChange={[Function]}
                    type="checkbox"
                    value={5}
                  />
                  <div
                    className="mock"
                  >
                    Icon - 
                    square
                  </div>
                  <span
                    id="traitify-career-level-5-label"
                  >
                    experience_level_5
                  </span>
                </label>
              </li>
            </div>
            <div>
              <li>
                <input
                  type="submit"
                  value="search"
                />
              </li>
            </div>
          </ul>
        </div>
      </li>
      <div />
    </ul>
  </form>
</div>
`;

exports[`CareerFilter renders nothing if not ready 1`] = `null`;
